# Hikvision-Alert-Watchdog

./: .gitignore  AlertWatchdog.cpp  AlertWatchdog.h  CMakeLists.txt  CMakeSettings.json  README.md  config.json.default  libhikvision.cpp  upload.cpp
include/: libhikvision.hpp  upload.h
